...
  static const auth = 'auth';
  static const main = 'main';
  static const manualVoucher = 'manual_voucher';
  static const changePassword = 'change_password';
  static const myChecks = 'my_checks';
  static const myCheckDetail = 'my_check_detail';
  static const activityHistory = 'activity_history';
  static const sellerEditProduct = 'seller_edit_product';
  static const sellerVouchers = 'seller_vouchers';
  static const exploreMap = 'explore_map';
  static const scan = 'scan';
  static const productDetail = 'product_detail';
  static const buyerCheckResult = 'buyer_check_result';
...
